--- a/src/css/BugReporter.css
+++ b/src/css/BugReporter.css
@@ -23,12 +23,13 @@
 
 #bug-reporter textarea {
     width: 100%;
-    height: 25px;
+    height: 60px;
+    resize: none;
+    
 }
 
 #bug-reporter button {
     border-radius: 4px;
-    height: 25px;
     font-size: 13px;
 }
 
