--- a/src/css/style.css
+++ b/src/css/style.css
@@ -501,7 +501,7 @@ font-size:x-large;
 }
 
 .contentsection-main {
-  max-width: 93%;
+  width: 93%;
   height: auto;
   padding: 45px 0 0 0;
   margin: 0 auto;
