--- a/src/css/style.css
+++ b/src/css/style.css
@@ -653,7 +653,7 @@ font-size:x-large;
 
 .contentsection-main-middle-box h6 a {
   cursor: pointer;
-  background: url(/images/red-btn-bg.png) no-repeat;
+  background: url(https://games.dtml.org/games/images/red-btn-bg.png) no-repeat;
   width: 177px;
   height: 50px;
   border: none;
@@ -668,12 +668,12 @@ font-size:x-large;
 }
 
 .contentsection-main-middle-box h6 a:hover {
-  background: url(/images/red-btn-bg-hover.png) no-repeat;
+  background:  url(https://games.dtml.org/games/images/red-btn-bg-hover.png) no-repeat;
   color: #fef187;
 }
 
 .contentsection-main-middle h5 button {
-  background: url(/images/moregame-btn.png) no-repeat;
+  background:  url(https://games.dtml.org/games/images/moregame-btn.png) no-repeat;
   width: 199px;
   height: 56px;
   margin: 0 auto;
@@ -695,7 +695,7 @@ font-size:x-large;
 }
 
 .contentsection-main-middle h5 button:hover {
-  background: url(/images/moregame-btn-hover.png) no-repeat;
+  background:  url(https://games.dtml.org/games/images/moregame-btn-hover.png) no-repeat;
 }
 
 /*===========contentsection end=================*/
@@ -874,7 +874,7 @@ font-size:x-large;
 /*===========footersecion start===================*/
 .footersecion {
   width: 100%;
-  background: url(/images/footer-bg.jpg) repeat-x left top #381b0b;
+  background:  url(https://games.dtml.org/games/images/footer-bg.jpg) repeat-x left top #381b0b;
   min-height: 111px;
   padding: 0;
   margin: 0 auto;
@@ -1042,7 +1042,7 @@ font-size:x-large;
 }
 
 .ratesection-top-right h6 a {
-  background: url(/images/embated-btn.png) no-repeat 0 0;
+  background:  url(https://games.dtml.org/games/images/embated-btn.png) no-repeat 0 0;
   color: #FFF;
   font-size: 17px;
   line-height: 50px;
@@ -1056,7 +1056,7 @@ font-size:x-large;
 }
 
 .ratesection-top-right h6 a:hover {
-  background: url(/images/embated-btn-hover.png) no-repeat 0 0;
+  background:  url(https://games.dtml.org/games/images/embated-btn-hover.png) no-repeat 0 0;
 }
 
 .ratesection-top textarea {
@@ -1121,7 +1121,7 @@ font-size:x-large;
 }
 
 .ratesection-bottom01 h5 a {
-  background: url(/images/backlist-btn.png) no-repeat;
+  background:  url(https://games.dtml.org/games/images/backlist-btn.png) no-repeat;
   width: 248px;
   height: 56px;
   display: inline-block;
@@ -1135,7 +1135,7 @@ font-size:x-large;
 }
 
 .ratesection-bottom01 h5 a:hover {
-  background: url(/images/backlist-btn-hover.png) no-repeat;
+  background:  url(https://games.dtml.org/games/images/backlist-btn-hover.png) no-repeat;
   cursor: pointer;
 }
 
@@ -1150,7 +1150,7 @@ font-size:x-large;
 }
 
 .ratesection-bottom01 h6 a {
-  background: url(/images/embated-btn.png) no-repeat 0 0;
+  background:  url(https://games.dtml.org/games/images/embated-btn.png) no-repeat 0 0;
   color: #FFF;
   font-size: 17px;
   line-height: 50px;
@@ -1164,7 +1164,7 @@ font-size:x-large;
 }
 
 .ratesection-bottom01 h6 a:hover {
-  background: url(/images/embated-btn-hover.png) no-repeat 0 0;
+  background:  url(https://games.dtml.org/games/images/embated-btn-hover.png) no-repeat 0 0;
 }
 
 .ratesection-bottom02 {
@@ -1200,7 +1200,7 @@ font-size:x-large;
 }
 
 .sponsors-setion h6 a {
-  background: url(/images/sponsors-btn.png) no-repeat;
+  background:  url(https://games.dtml.org/games/images/sponsors-btn.png) no-repeat;
   width: 282px;
   height: 68px;
   margin: 0 auto;
@@ -1219,7 +1219,7 @@ font-size:x-large;
 }
 
 .sponsors-setion h6 a:hover {
-  background: url(/images/sponsors-btn-hover.png) no-repeat;
+  background:  url(https://games.dtml.org/games/images/sponsors-btn-hover.png) no-repeat;
 }
 
 /*========sponsors-setion end==============*/
@@ -1329,16 +1329,16 @@ font-size:x-large;
 	border-bottom: 1px solid #dcdcdc;
 }
 .browser-chrome {
-	background: url(/images/chrome-logo.png) no-repeat 30px 50%;
+	background:  url(https://games.dtml.org/games/images/chrome-logo.png) no-repeat 30px 50%;
 }
 .browser-firefox {
-	background: url(/images/firefox-logo.png) no-repeat 30px 50%;
+	background:  url(https://games.dtml.org/games/images/firefox-logo.png) no-repeat 30px 50%;
 }
 .browser-opera {
-	background: url(/images/opera-logo.png) no-repeat 30px 50%;
+	background:  url(https://games.dtml.org/games/images/opera-logo.png) no-repeat 30px 50%;
 }
 .browser-safari {
-	background: url(/images/safari-logo.png) no-repeat 30px 50%;
+	background:  url(https://games.dtml.org/games/images/safari-logo.png) no-repeat 30px 50%;
 }
 
 /* @media all and (min-width:500px) */
