--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1370,6 +1370,31 @@ a {
 	font-size:16px
 }
 
+.Share__some-network {
+  vertical-align: top;
+  display: inline-block;
+  margin-right: 15px;
+  text-align: center;
+}
+
+.Share__some-network__share-count {
+  margin-top: 3px;
+  font-size: 12px;
+}
+
+.Share__some-network__share-button {
+  cursor: pointer;
+}
+
+.Share__some-network__share-button:hover:not(:active) {
+  opacity: 0.75;
+}
+
+.Share__some-network__custom-icon {
+  width:32px;
+  height:32px;
+}
+
 
 
 @media screen and (max-width: 900px) and (min-width: 420px) {
