--- a/src/css/style.css
+++ b/src/css/style.css
@@ -114,7 +114,7 @@ body {
   padding: 0 0 0 0;
   font-family: 'Open Sans', sans-serif;
   color: #6c6d70;
-  background-color:#f1f1f1;
+  background-color:#c7c7c7 !important;
   font-size: 14px;
 }
 
@@ -353,7 +353,7 @@ font-size:x-large;
 
 .logosection {
   width: 100%;
-  background: #0078d7;
+  background: #ae9167;
   min-height: 75px;
   padding: 0;
   margin: 0 auto;
@@ -457,6 +457,8 @@ font-size:x-large;
   padding: 0;
   margin: 0 auto;
   position: relative;
+  border: 1px solid rgba(0, 25, 128, 0.1);
+  box-shadow: 0 2px 3px rgba(0,0,0,0.1);
 }
 
 .bannersection img {
@@ -616,14 +618,19 @@ font-size:x-large;
 }
 
 .contentsection-main-middle-box {
-  width: 266px;
+  width: 227px;
   background: #FFF;
+  background-image: url("/images/card_bk.png");
+  background-repeat: no-repeat;
+  box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
+  transition: all 0.3s;
+  background-position: right top;
   border: 1px solid #d9d9d9;
   padding: 10px;
   margin: 10px;
   display: inline-block;
   vertical-align: top;
-  min-height: 509px;
+  height: 528px;
 }
 
 .contentsection-main-middle-box .imgsec {
@@ -650,15 +657,16 @@ font-size:x-large;
   font-size: 15px;
   line-height: normal;
   font-weight: 400;
-  min-height: 45px;
+  height: 100px;
+  overflow:hidden;
   width: 96%;
   margin: 0 auto 11px auto;
 }
 
 .contentsection-main-middle-box h6 a {
   cursor: pointer;
-  background: url(https://dtml.org/esl/images/red-btn-bg.png) no-repeat;
-  width: 177px;
+  background: url(/images/play-btn-bg.png) no-repeat;
+  width: 227px;
   height: 50px;
   border: none;
   display: inline-block;
@@ -668,16 +676,16 @@ font-size:x-large;
   line-height: 50px;
   font-weight: 400;
   text-transform: uppercase;
-  padding-left: 24px;
+  text-align:center;
 }
 
 .contentsection-main-middle-box h6 a:hover {
-  background:  url(https:/dtml.org/esl/images/red-btn-bg-hover.png) no-repeat;
+  background:  url(/esl/images/red-btn-bg-hover.png) no-repeat;
   color: #000;
 }
 
 .contentsection-main-middle h5 button {
-  background:  url(https://dtml.org/esl/images/moregame-btn.png) no-repeat;
+  background:  url(/images/moregame-btn.png) no-repeat;
   width: 199px;
   height: 56px;
   margin: 0 auto;
@@ -698,9 +706,43 @@ font-size:x-large;
   margin-bottom: 10px;
 }
 
-.contentsection-main-middle h5 button:hover {
-  background:  url(https://dtml.org/esl/images/moregame-btn-hover.png) no-repeat;
-}
+ .contentsection-main-middle h5 button:hover {
+  background:  url(/images/moregame-btn-hover.png) no-repeat;
+ }
+
+.contentsection-main-middle-box h6 a {
+   cursor: pointer;
+   width: 80%;
+   height: 50px;
+   border: none;
+   display: inline-block;
+   line-height: 40px;
+   font-weight: 400;
+   padding: 5px;
+   font-family:'Roboto',sans-serif;
+     text-decoration: none;
+   text-transform: uppercase;
+   text-align:center; 
+  }
+  
+.contentsection-main-middle-box h6 a:hover {
+   cursor: pointer;
+   width: 100%;
+   height: 50px;
+   border: none;
+   font-family:'Roboto',sans-serif;
+   display: inline-block;
+   line-height: 40px;
+   font-weight: 400;
+   text-decoration: none;
+   background-color: #453823 ;
+   text-shadow: 0 0.04em 0.04em rgba(0,0,0,0.35);
+   border: none;
+   color: white;
+   padding: 5px;
+   text-transform: uppercase;
+   text-align:center; 
+  }
 
 /*===========contentsection end=================*/
 
@@ -715,7 +757,7 @@ font-size:x-large;
 }
 
 .game-content-top {
-  min-height: 330px;
+  height: 350px;
 }
 
 .game-content-middle {
@@ -723,7 +765,8 @@ font-size:x-large;
 }
 
 .game-content-bottom {
-  min-height: 60px;
+  height: 60px;
+  width:100%;
 }
 
 .game-sidebar {
