--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -1,7 +1,7 @@
 .contentsection.gamecontent {
 }
 
-@media only screen and (min-width: 761px) and (max-width: 1199px) {
+@media only screen and (min-width: 845px) and (max-width: 1199px) {
   img {
     max-width: 100%;
     height: auto;
@@ -19,7 +19,7 @@
   .logosection-main-right {
     width: 60%;
   }
-
+  
   .contentsection-main {
     width: 98%;
     padding: 18px 0;
@@ -53,7 +53,7 @@
 
 }
 
-@media only screen and (min-width: 480px) and (max-width: 760px) {
+@media only screen and (min-width: 480px) and (max-width: 844px) {
   img {
     max-width: 100%;
     height: auto;
@@ -62,6 +62,11 @@
   .logosection-main {
     width: 98%;
     margin: 0 auto;
+  }
+  
+  .bannersection_list
+  {
+	  display:none;
   }
 
   .logosection-main-left {
@@ -179,6 +184,11 @@
   img {
     max-width: 100%;
     height: auto;
+  }
+  
+    .bannersection_list
+  {
+	  display:none;
   }
 
   .logosection-main {
