--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1083,6 +1083,13 @@ font-size:x-large;
   margin: 0 12px 0 0;
 }
 
+ .flag
+  {
+	 max-width:100px;
+	 min-width:50px;
+	 text-align:center;
+  }
+
 .ratesection-top-right h6 a {
   background:  url(https://dtml.org/esl/images/embated-btn.png) no-repeat 0 0;
   color: #FFF;
